--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,16 @@ hr{
 	background-color: var(--primary-color);
 	border-radius: 0.5rem;
 	color: white;
+	display: inline-block;
+	margin-top: 0.5rem;
 }
 
 .link-secondary{
 	color: var(--primary-color);
 	border-radius: 0.5rem;
 	border: 1px solid  var(--primary-color);
+	display: inline-block;
+	margin-top: 0.5rem;
 }
 
 .list-non-bullet{
@@ -46,7 +50,7 @@ hr{
 }
 
 .list-item-inline{
-	display: inline;
+	display: inline-block;
 	padding: 0rem 0.2rem;
 }
 
